# rag-knowledge-assistant

./: .env.example  .gitignore  Makefile  PHASE_1_PLANNING.md  PHASE_2_ARCHITECTURE.md  README.md
.github/workflows/: ci.yml
backend/: pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/routes/: documents.py  health.py  query.py
backend/app/core/: config.py
backend/app/db/: metadata.py
backend/app/rag/: chunker.py  embedder.py  generator.py  parser.py  retriever.py  vector_store.py
backend/app/schemas/: document.py  query.py
backend/app/services/: document_service.py  ingestion_service.py  query_service.py
backend/data/: metadata.db
backend/tests/: conftest.py  test_api_flow.py  test_chunker.py  test_config.py  test_config_defaults.py  test_documents.py  test_embedder.py  test_generator.py  test_health.py  test_metadata.py  test_parser.py  test_query.py  test_query_pipeline.py  test_query_service.py  test_retriever.py
docs/: ARCHITECTURE.md  DEPLOYMENT.md  PORTFOLIO.md
frontend/: index.html  package-lock.json  package.json
frontend/src/components/: ChatInterface.tsx  CitationPanel.tsx  DocumentLibrary.tsx  UploadPanel.tsx
frontend/src/components/chat/: AnswerCard.tsx  ChatPanel.tsx
frontend/src/components/citations/: CitationList.tsx
frontend/src/components/documents/: DocumentLibrary.tsx
frontend/src/hooks/: useChat.ts  useDocuments.ts  useQuery.ts  useUpload.ts
frontend/src/lib/: api.ts
frontend/src/pages/: Dashboard.tsx  DashboardPage.tsx
frontend/src/types/: api.ts  index.ts
(+1 files in other folders)
